--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,11 @@ DATA_SERVICE_HOST=0.0.0.0
 # 币安API配置
 BINANCE_API_KEY=your_api_key_here
 BINANCE_API_SECRET=your_api_secret_here
-BINANCE_BASE_PATH=https://fapi.binance.com
+BINANCE_FUTURES_BASE_URL=https://fapi.binance.com
+API_REQUEST_INTERVAL=0.15
+
+# 数据更新间隔配置
+UPDATE_INTERVAL_1H=3600
 
 # PostgreSQL配置（用于迁移）
 PG_HOST=localhost
